# ratterm

./: .dockerignore  .gitignore  CHANGELOG_DEV_VS_MAIN.md  CHANGES.md  Cargo.toml  DEPENDENCIES.md  PLAN.md  README.md  build.ps1  install.bat  install.ps1  install.sh  run.ps1  test_api.py  test_background_api.py  test_output.txt
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.install-test  Dockerfile.lua-test  Dockerfile.msrv  Dockerfile.test  Dockerfile.test-arm  Dockerfile.windows-test  docker-compose.yml
docs/: README.md  architecture.md  command_palette.md  duplicate_code_report.md  extension_system.md  extensions.md  fixes.md  hotkeys.md  ratrc_docs.md  testing.md
examples/bright-blue/: main.py  ratterm.toml
examples/theme-changer/: main.py  ratterm.toml
scripts/: docker-install-test.sh  sync_version.ps1  test-install.ps1  test-install.sh  test-local.ps1  test-local.sh
src/: clipboard.rs  lib.rs  logging.rs  main.rs  session.rs  updater.rs
src/addons/: fetcher.rs  github.rs  installer.rs  mod.rs  storage.rs  types.rs
src/api/: handler.rs  mod.rs  protocol.rs  server.rs
src/api/transport/: mod.rs  unix.rs  windows.rs
src/app/: addon_ops.rs  commands.rs  dashboard_hotkeys.rs  dashboard_nav.rs  docker_connect.rs  docker_logs_ops.rs  docker_ops.rs  extension_ops.rs  file_ops.rs  health_ops.rs  input.rs  input_addon.rs  input_docker.rs  input_docker_create.rs  input_docker_logs.rs  input_editor.rs  input_health.rs  input_mouse.rs  input_ssh.rs  input_terminal.rs  input_traits.rs  keymap.rs  layout_ops.rs  mod.rs  popup_ops.rs  render.rs  session_ops.rs  ssh_connect.rs  ssh_ops.rs  ssh_scan.rs  terminal_ops.rs
src/completion/: cache.rs  debounce.rs  keyword.rs  mod.rs  provider.rs
src/completion/lsp/: client.rs  config.rs  manager.rs  mod.rs
src/config/: keybindings.rs  mod.rs  platform.rs  shell.rs  vscode.rs
src/daemon/: deployer.rs  mod.rs  receiver.rs  script.rs  test_utils.rs  types.rs
src/docker/: api.rs  container.rs  discovery.rs  mod.rs  storage.rs
src/docker_logs/: access.rs  client.rs  config.rs  daemon.rs  log_buffer.rs  log_storage.rs  log_stream.rs  mod.rs  search.rs  types.rs
src/docker_logs/ui/: input.rs  mod.rs  state.rs  widget.rs
src/editor/: buffer.rs  cursor.rs  edit.rs  editing.rs  find.rs  mod.rs  movement.rs  selection.rs  view.rs
src/extension/: api.rs  approval.rs  installer.rs  lua.rs  manifest.rs  mod.rs  native.rs  registry.rs  theme_ext.rs  wasm.rs
src/extension/lua_api/: commands.rs  editor.rs  events.rs  fs.rs  mod.rs  terminal.rs  timers.rs
src/extension/process/: manager.rs  mod.rs
src/extension/rest/: auth.rs  mod.rs  router.rs  server.rs  state.rs  types.rs
src/extension/rest/handlers/: commands.rs  editor.rs  events.rs  fs.rs  layout.rs  mod.rs  system.rs  tabs.rs  terminal.rs
src/filebrowser/: entry.rs  mod.rs
src/remote/: browser.rs  mod.rs  sftp.rs
src/ssh/: collector.rs  host.rs  metrics.rs  mod.rs  scanner.rs  storage.rs
src/terminal/: action.rs  background.rs  cell.rs  grid.rs  mod.rs  multiplexer.rs  parser.rs  pty.rs  selection.rs  style.rs
src/terminal/multiplexer/: grid.rs  mod.rs  tab.rs  types.rs
src/theme/: colors.rs  component.rs  custom.rs  mod.rs  persistence.rs  preset.rs
src/ui/: editor_tabs.rs  editor_widget.rs  file_picker.rs  ghost_text.rs  hotkey_overlay.rs  key_hint_bar.rs  layout.rs  manager_footer.rs  mod.rs  popup.rs  ssh_manager.rs  statusbar.rs  terminal_tabs.rs  terminal_widget.rs  window_position.rs
src/ui/addon_manager/: mod.rs  selector.rs  types.rs  widget.rs  widget_render.rs
src/ui/docker_manager/: mod.rs  selector.rs  types.rs  widget.rs  widget_create.rs  widget_forms.rs  widget_render.rs
src/ui/health_dashboard/: mod.rs  widget.rs
src/ui/popup/: command_palette.rs  extension_approval.rs  keybinding_notification.rs  mod.rs  mode_switcher.rs  shell_selector.rs  theme_selector.rs
src/ui/ssh_manager/: mod.rs  selector.rs  selector_scan.rs  types.rs  widget.rs  widget_forms.rs  widget_render.rs
tests/: completion_tests.rs  daemon_tests.rs  e2e_compile_check.rs  e2e_smoke.rs  editor_buffer_tests.rs  expectrl_command_palette_tests.rs  expectrl_docker_logs_tests.rs  expectrl_docker_manager_tests.rs  expectrl_health_dashboard_tests.rs  expectrl_help_bar_tests.rs  expectrl_smoke_tests.rs  expectrl_ssh_manager_tests.rs  expectrl_status_bar_tests.rs  expectrl_visual_polish_tests.rs  health_dashboard_tests.rs  lua_extension_tests.rs  terminal_grid_tests.rs  terminal_parser_tests.rs  terminal_pty_tests.rs  ui_tests.rs
tests/e2e/: test_cli_args.rs  test_clipboard.rs  test_command_palette.rs  test_config.rs  test_debug.rs  test_editor_default.rs  test_editor_emacs.rs  test_editor_file_ops.rs  test_editor_search.rs  test_editor_tabs.rs  test_editor_vim.rs  test_editor_vscode.rs  test_file_browser.rs  test_mode_switcher.rs  test_pane_focus.rs  test_pane_resize.rs  test_quit_save_confirm.rs  test_startup.rs  test_terminal_basic.rs  test_terminal_scrollback.rs  test_terminal_splits.rs  test_terminal_tabs.rs
tests/e2e/common/: assertions.rs  harness.rs  keys.rs  mod.rs
tests/fixtures/lua/basic-extension/: extension.toml  init.lua
tests/fixtures/lua/complex-extension/: extension.toml  init.lua
tests/fixtures/lua/error-extension/: extension.toml  init.lua
tests/fixtures/lua/preload-extension/: extension.toml  init.lua
tests/fixtures/lua/preload-extension/lib/: helpers.lua  utils.lua
tests/helpers/: mod.rs  tui_harness.rs
