[package]
name = "ratterm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A split-terminal TUI with PTY terminal and code editor"
license = "GPL-3.0-or-later"
authors = ["Hastur-Dev"]

[[bin]]
name = "rat"
path = "src/main.rs"

[features]
default = []
system-clipboard = ["arboard"]

[dependencies]
# Clipboard (optional)
arboard = { version = "3.4", optional = true }

# TUI framework
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# PTY and terminal
portable-pty = "0.9"
vte = "0.15"

# Text editing
ropey = "1.6"

# Syntax highlighting
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"

# LSP
lsp-types = "0.97"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
atty = "0.2"
dirs = "6.0"
fuzzy-matcher = "0.3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
unicode-segmentation = "1.12"

[dev-dependencies]
proptest = "1.6"
tempfile = "3.15"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1

# Lints configuration
[lints.rust]
warnings = "warn"

[lints.clippy]
# Allow common patterns that are noisy but not bugs
unnested_or_patterns = "allow"
uninlined_format_args = "allow"
match_same_arms = "allow"
too_many_lines = "allow"
question_mark = "allow"
redundant_closure_for_method_calls = "allow"
needless_raw_string_hashes = "allow"
byte_char_slices = "allow"
similar_names = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
assertions_on_constants = "allow"
unused_self = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
# Keep important warnings enabled
unwrap_used = "warn"
expect_used = "warn"
